--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-orientation": "^3.1.3",
-    "react-native-root-siblings": "^4.1.1"
+    "react-native-root-siblings": "^4.1.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.8.0",
+    "react-native-toast-message": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
