--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,9 @@ android {
 }
 
 dependencies {
+     compile project(':react-native-video')
+    implementation "androidx.appcompat:appcompat:1.0.0"
+
      compile project(':react-native-orientation')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
