--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'meizhuang' do
 
   pod 'react-native-orientation', :path => '../node_modules/react-native-orientation'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'meizhuangTests' do
     inherit! :complete
     # Pods for testing
