--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-toast-message": "^2.1.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0"
   },
   "devDependencies": {
