--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.2.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
