--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build-android": "cd android && ./gradlew assembleRelease && cd .."
+
   },
   "dependencies": {
     "@react-native-community/slider": "^4.2.0",
